Fixing JENKINS-68498: JAXB error during job run with HPE ALI plugin on Java 11